--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "solucao_bt",
+  "name": "solucao_soft",
   "version": "1.0.0",
-  "description": "",
+  "description": "standard",
   "main": "database.js",
   "dependencies": {
     "abbrev": "^1.1.1",
@@ -20,11 +20,13 @@
     "chownr": "^2.0.0",
     "color-support": "^1.1.3",
     "concat-map": "^0.0.1",
+    "connect-flash": "^0.1.1",
     "console-control-strings": "^1.1.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.5.0",
     "cookie-signature": "^1.0.6",
+    "dayjs": "^1.11.7",
     "debug": "^2.6.9",
     "delegates": "^1.0.0",
     "denque": "^2.1.0",
@@ -39,6 +41,7 @@
     "etag": "^1.8.1",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
+    "express-session": "^1.17.3",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
@@ -87,6 +90,8 @@
     "on-finished": "^2.4.1",
     "once": "^1.4.0",
     "parseurl": "^1.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "path-is-absolute": "^1.0.1",
     "path-to-regexp": "^0.1.7",
     "proxy-addr": "^2.0.7",
