--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "brace-expansion": "^1.1.11",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.2",
+    "chart.js": "^4.3.2",
     "chownr": "^2.0.0",
     "color-support": "^1.1.3",
     "concat-map": "^0.0.1",
@@ -34,7 +35,7 @@
     "destroy": "^1.2.0",
     "detect-libc": "^2.0.1",
     "ee-first": "^1.1.1",
-    "ejs": "^3.1.8",
+    "ejs": "^3.1.9",
     "emoji-regex": "^8.0.0",
     "encodeurl": "^1.0.2",
     "escape-html": "^1.0.3",
@@ -77,12 +78,12 @@
     "minizlib": "^2.1.2",
     "mkdirp": "^1.0.4",
     "ms": "^2.0.0",
-    "mysql2": "^3.1.2",
+    "mysql2": "^3.5.2",
     "named-placeholders": "^1.1.3",
     "negotiator": "^0.6.3",
     "node-addon-api": "^5.1.0",
     "node-fetch": "^2.6.9",
-    "nodemailer": "^6.9.1",
+    "nodemailer": "^6.9.4",
     "nopt": "^5.0.0",
     "npmlog": "^5.0.1",
     "object-assign": "^4.1.1",
@@ -92,6 +93,7 @@
     "parseurl": "^1.3.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "path-is-absolute": "^1.0.1",
     "path-to-regexp": "^0.1.7",
     "proxy-addr": "^2.0.7",
@@ -133,5 +135,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {}
 }
